# daimon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  context7.json  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  pr-validation.yml  release.yml
.scars/: 0001-llm-judge-grounding-reference.deadend.md  0002-probe-concurrent-runs.landmine.md  0003-uv-tool-install-cached-wheel.landmine.md  0004-llm-judge-grounding-noise.landmine.md  0005-uv-run-daimon-resolves-stale-global-tool.landmine.md  0006-briefing-cap-assumes-chronological-decisions.landmine.md  0007-from-session-returns-raw-block-array-content.landmine.md  0008-merge-call-count-is-hierarchical.landmine.md  0009-serialize-log-last-of-kind-masks-failures.landmine.md  0010-judge-grades-wrong-dimension.landmine.md  0011-grounding-skeptic-strictness-is-correct.fence.md  0012-scale-grading-penalizes-verbose-history.landmine.md  0013-two-llm-clients-share-hang-shape.landmine.md  0014-haiku-timeout-floor.fence.md  0015-gateway-response-cache-pins-bad-responses.landmine.md  0016-simulated-clock-must-thread-into-every-now-consumer.landmine.md  0017-gateway-815s-request-ceiling.landmine.md  0018-grounding-screen-droplist-safety.landmine.md  0019-scar-pattern-anchors-are-a-three-layer-escape-trap.landmine.md  0020-exact-shape-guards-on-host-transcript-rows-fail-silently.deadend.md  0021-single-quoted-violation-field-is-silently-dead.landmine.md  0022-unbounded-prefix-class-before-keyword-alternation-backtracks.deadend.md  0023-tmp-symlink-breaks-project-slug-match.landmine.md  README.md  template.md
.scars/candidates/: docusaurus-i18n-md-links-break-across-locales.md  local-coverage-lies-across-crypto-libs.md  unbounded-prefix-class-before-keyword-alternation-backtracks.md
benchmark/: .gitignore  README.md  longmemeval_s.sha256
benchmark/results/: longmemeval-s-baseline.json
docs/: ARCHITECTURE.md  MVP-DREAM-BRIEFING.md  PITCH.md  PROBLEM.md  RFC.md  VALIDATION.md  backends-tested.md  configuration.md  team.md
docs/demo/: README.md  claude-p-audit.tape  claude-p.tape  demo.tape  session1-aws.md  session2-gcp-pivot.md
docs/hosts/: README.md  claude-code.md  codex.md  gemini.md  windsurf.md
hook/: CODEX.md  README.md  _daimon_hook_lib.py  codex-hooks.py  daimon-codex-session-start.py  daimon-codex-stop.py  daimon-gemini-session-end.py  daimon-gemini-session-start.py  daimon-hooks.py  daimon-prompt-recall.py  daimon-session-brief.py  daimon-session-end.py  daimon-windsurf-hooks.py  daimon-windsurf-probe.py  gemini-hooks.py  redact.py
hooks/: hooks.json
plugin/: README.md  pyproject.toml
plugin/daimon_briefing/: __init__.py  anchor.py  briefing.py  carry.py  cli.py  codex_hooks.py  config.py  configure.py  harvest.py  hooks.py  ledger.py  llm.py  mcp_server.py  mcp_tools.py  recall.py  receipts.py  redact.py  render.py  schema.py  scoring.py  serializer.py  skill_content.py  skill_install.py  store.py  teamproject.py  teamsync.py  transcript.py  worldcheck.py
plugin/daimon_briefing/_hooks/: __init__.py  _daimon_hook_lib.py  daimon-codex-session-start.py  daimon-windsurf-hooks.py
plugin/skills/daimon-briefing/: SKILL.md
plugin/skills/daimon-end/: SKILL.md
plugin/tests/: conftest.py  test_anchor.py  test_bench_adapter.py  test_bench_cache.py  test_bench_carry.py  test_bench_dataset.py  test_bench_metrics.py  test_bench_scene.py  test_bench_smoke.py  test_briefing.py  test_carry.py  test_claude_hooks.py  test_cli.py  test_codex_hooks.py  test_config.py  test_configure.py  test_gemini_hooks.py  test_harvest.py  test_hooks.py  test_hooks_install.py  test_hooks_status.py  test_isolation.py  test_llm.py  test_mcp_server.py  test_packaging.py  test_quote_verification.py  test_recall.py  test_receipts.py  test_redact.py  test_redact_leak_gaps.py  test_render.py  test_scoring.py  test_serialize_brief_e2e.py  test_serializer.py  test_skill_cli.py  test_skill_content.py  test_skill_install.py  test_store.py  test_sync_hooks.py  test_teamproject.py  (+5 more)
plugin/tests/bench/: __init__.py  adapter.py  cache.py  dataset.py  metrics.py  run.py
plugin/tests/fixtures/: sample_transcript.md
research/: DECISIONS.md  GLOSSARY.md  LOGBOOK.md  OPEN-QUESTIONS.md  README.md  probe61_pre_user_prompt.py
research/experiments/: README.md
research/experiments/lib/: claude_sessions.py  llm.py  test_llm.py
research/experiments/multicycle/: README.md  conftest.py  grade.py  run_multicycle.py  seed.py  synth.py  test_grade.py  test_run.py  test_seed.py  test_synth.py
research/experiments/track-a/: .gitignore  README.md  probe_d007.py  rerun.py  runner.py  test_rerun.py
research/experiments/track-a/prompts/: 01-serialize.md  01b-serialize-d007.md  01c-merge-checkpoints.md  (+1 more)
research/experiments/track-c/: .gitignore  README.md  extract.py
research/findings/: 00-system-framing.md  01-memory-retrieval.md  02-crp-serialization.md  03-crp-reconstruction.md  04-epistemic-graph.md  05-initiative.md  06-evidence-base.md  07-hermes-honcho-delta.md  08-cap-asset-adoption.md
research/memory-backend/: FINDINGS.md  README.md
research/memory-backend/benchmark/: README.md  __init__.py  datasets.py  evaluate.py  extractor.py  pilot_kimi.py  run_benchmark.py  test_evaluate.py
scripts/: sync_hooks.py
website/: docusaurus.config.ts
website/blog/: 2026-07-18-daimon-has-a-home.md  2026-07-21-daimon-0-19.md  authors.yml
website/docs/: index.md
website/docs/concepts/: architecture.md  carry.md  lifecycle.md  receipts.md  trust-classes.md
website/docs/getting-started/: configuration.md  quickstart.md
website/docs/hosts/: _category_.json  claude-code.md  codex.md  gemini.md  index.md  windsurf.md
website/docs/reference/: _category_.json  backends-tested.md  mcp.md  validation.md
website/docs/team/: _category_.json  team.md
website/i18n/es/: code.json
website/src/css/: custom.css
website/src/pages/: index.tsx
(+174 files in other folders)
