[project]
name = "daimon-briefing"
version = "0.3.2"
description = "Dream-briefing for AI coding agents: writes a cognitive checkpoint at session end and shows a 'while you were away' briefing at session start. Self-contained, stdlib-only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Daily-Nerd / Daimon" }]
# Runtime: stdlib only. hermes is provided by the host at runtime, never a hard dep.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pretty = ["rich>=13"]

# pip-distributable hermes plugin: auto-discovered via the entry-point group.
# VERIFIED — website/docs/guides/build-a-hermes-plugin.md (Entry-Point Group: "hermes_agent.plugins")
[project.entry-points."hermes_agent.plugins"]
daimon-briefing = "daimon_briefing"

[project.scripts]
daimon = "daimon_briefing.cli:main"
daimon-briefing = "daimon_briefing.cli:main"  # deprecated alias — remove a release after the daimon rename

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daimon_briefing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
