[project]
name = "daimon-briefing"
version = "0.19.0"
description = "Dream-briefing for AI coding agents: writes a cognitive checkpoint at session end and shows a 'while you were away' briefing at session start. Self-contained, stdlib-only."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639 SPDX expression; the LICENSE file here is a byte-identical copy of
# the repo-root original (drift-guarded by tests/test_packaging.py) — the
# package builds from plugin/, so the wheel can only ship what lives here.
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Daily-Nerd / Daimon" }]
keywords = [
    "claude-code", "ai-agents", "memory", "llm", "context",
    "briefing", "provenance", "session", "checkpoint",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Environment :: Console",
]
# Runtime: stdlib only, except the py3.10 TOML backport — teamproject reads the
# architect-authored daimon-team.toml (#200) and tomllib is stdlib only from 3.11.
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Versions are pinned so the CI lint gate is reproducible: a ruff/mypy
# point release that changes rule behaviour can't silently turn CI red.
dev = [
    "pytest>=8.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
    "mypy==2.2.0",
]
pretty = [
    "rich>=13",
    "rich-argparse>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Daily-Nerd/daimon"
Repository = "https://github.com/Daily-Nerd/daimon"
Issues = "https://github.com/Daily-Nerd/daimon/issues"
Changelog = "https://github.com/Daily-Nerd/daimon/blob/main/CHANGELOG.md"

# pip-distributable hermes plugin: auto-discovered via the entry-point group.
# VERIFIED — website/docs/guides/build-a-hermes-plugin.md (Entry-Point Group: "hermes_agent.plugins")
[project.entry-points."hermes_agent.plugins"]
daimon-briefing = "daimon_briefing"

[project.scripts]
daimon = "daimon_briefing.cli:main"
daimon-briefing = "daimon_briefing.cli:main"  # deprecated alias — remove a release after the daimon rename

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daimon_briefing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# 88 is ruff's own default and the tree already sits within the default
# lint rule set (E4/E7/E9/F) with zero findings. Line length is not gated
# here — E501 is not in the default select, and `ruff format` is a deferred,
# scar-sensitive slice — so this value only informs future formatting.
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# The default rule set, stated explicitly so a future ruff default change
# can't shift what the pinned gate enforces. Passes clean today.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
# Non-blocking in CI (continue-on-error). ignore_missing_imports absorbs the
# optional rich / host-provided imports; strict mode and the remaining errors
# are a deliberate follow-up, not this slice.
python_version = "3.10"
ignore_missing_imports = true

[tool.coverage.run]
source = ["daimon_briefing"]
# _hooks/ ships byte-identical mirrors of files whose canonical sources are
# tested (drift-guarded by test_hooks_install.py), and the adapter scripts
# execute only as subprocesses under the host's Python — in-process line
# coverage can never see them, so counting them only distorts the total.
omit = ["daimon_briefing/_hooks/*"]
